# math

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: main.yml  pull_request.yml  push.yml
benches/: README.md  basis_reductions.rs  benchmarks.rs  cholesky_decomposition.rs  classic_crypto.rs  integer.rs  matrix.txt  matrix_arith.rs  ntt_multiplication.rs  sample_z.rs  sampling.rs  solve.rs  target.txt  uniform.rs
src/: error.rs  finite_fields.rs  integer.rs  integer_mod_q.rs  lib.rs  macros.rs  rational.rs  traits.rs  traits2.rs  utils.rs
src/finite_fields/: modulus_polynomial_ring_zq.rs  polynomial_ring_zq.rs
src/finite_fields/modulus_polynomial_ring_zq/: from.rs  get.rs  to_string.rs
src/integer/: mat_poly_over_z.rs  mat_poly_z.rs  mat_z.rs  poly_over_z.rs  poly_z.rs  vec_z.rs  z.rs
src/integer/mat_poly_over_z/: arithmetic.rs  cmp.rs  coefficient_embedding.rs  concat.rs  default.rs  evaluate.rs  from.rs  get.rs  norm.rs  ownership.rs  properties.rs  reduce.rs  sample.rs  serialize.rs  set.rs  sort.rs  tensor.rs  to_string.rs  trace.rs  transpose.rs  unsafe_functions.rs  vector.rs
src/integer/mat_poly_z/: conversions.rs  from.rs
src/integer/mat_z/: arithmetic.rs  basis_reductions.rs  cmp.rs  concat.rs  default.rs  determinant.rs  fmpz_mat_struct_helpers.rs  forms.rs  from.rs  get.rs  inverse.rs  mul.rs  norm.rs  ownership.rs  properties.rs  sample.rs  serialize.rs  set.rs  sort.rs  tensor.rs  to_string.rs  trace.rs  transpose.rs  unsafe_functions.rs
src/integer/poly_over_z/: arithmetic.rs  cmp.rs  coefficient_embedding.rs  cyclotomic.rs  default.rs  dot_product.rs  evaluate.rs  fmpz_poly_helpers.rs  from.rs  get.rs  norm.rs  ownership.rs  properties.rs  reduce.rs  serialize.rs  set.rs  to_string.rs  unsafe_functions.rs
src/integer/poly_z/: conversions.rs  evaluate.rs  from.rs  get.rs  ownership.rs  set.rs  to_string.rs
src/integer/vec_z/: from.rs  get.rs  mul.rs  set.rs  transpose.rs
src/integer/z/: arithmetic.rs  cmp.rs  default.rs  distance.rs  exp.rs  factor.rs  fmpz_helpers.rs  from.rs  gcd.rs  hash.rs  lcm.rs  logarithm.rs  logic.rs  ownership.rs  properties.rs  sample.rs  serialize.rs  to_string.rs  unsafe_functions.rs
src/integer_mod_q/: mat_ntt_polynomial_ring_zq.rs  mat_polynomial_ring_zq.rs  mat_zq.rs  modulus.rs  modulus_polynomial_ring_zq.rs  ntt_basis_polynomial_ring_zq.rs  ntt_polynomial_ring_zq.rs  poly_over_zq.rs  poly_zq.rs  polynomial_ring_zq.rs  z_q.rs
src/integer_mod_q/mat_ntt_polynomial_ring_zq/: arithmetic.rs  cmp.rs  from.rs  get.rs
src/integer_mod_q/mat_polynomial_ring_zq/: arithmetic.rs  cmp.rs  coefficient_embedding.rs  concat.rs  default.rs  from.rs  get.rs  norm.rs  properties.rs  set.rs  (+8 more)
src/macros/: arithmetics.rs  cmp.rs  compare_base.rs  for_others.rs  from.rs  serialize.rs  unsafe_passthrough.rs
src/rational/: mat_q.rs  poly_over_q.rs  poly_q.rs  q.rs
src/utils/: collective_evaluation.rs  coordinate.rs  dimensions.rs  factorization.rs  index.rs  parse.rs  prepare.rs  reduce.rs  sample.rs  sort.rs
(+280 files in other folders)
