[package]
name = "qfall-math"
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # due to rand and rand_distr dependency
description = "Prototyping Library for Lattice-Based Cryptography"
readme = "README.md"
homepage = "https://qfall.github.io"
repository = "https://github.com/qfall/math"
license = "MPL 2.0"
license-file = "LICENSE"
keywords = ["math", "prototype", "lattice", "cryptography"]
categories = ["cryptography", "development-tools::build-utils", "development-tools::profiling", "development-tools::testing", "mathematics"]
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
flint-sys = "0.7.3"
libc = "0.2"
paste = "1.0"
rand = "0.9"
rand_distr = "0.5"
regex = "1"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
string-builder = "0.2"
thiserror = "2.0"
lazy_static = "1.4"
probability = "0.20.3"
derive_more = { version = "2.0.1", features = ["display"] }

[profile.bench]
debug = true

[[bench]]
name = "benchmarks"
harness = false
